# onstage_standalone

./: .gitignore  .gitmodules  AUDIO FLOW SCHEMATIC.txt  CMakeLists.txt  FILE_STRUCTURE.txt  MAC_linux_ios install info.txt  ONSTAGE full code.txt  OnStage_iOS.ipa  README.md  asio tree file.txt  asset sizes.txt  build_mac.yml  change log.txt  check_project.py  chris ideas for future updates.txt  colosseum full code.txt  colosseum_logo.psd  developerID_application.cer  file tree_asio sdk file tree.txt  file tree_full code.txt  file tree_juce file tree.txt  file tree_vst sdk file tree.txt  full code.txt  gitignore  icon.icns  juce link.txt  main app prompt .txt  nodes code.txt  onstage prompt for chatgpt.txt  onstage_logo.psd  plugin processor full files.txt  pluginmanager files.txt  pluginproccessor files.txt  prompt.txt  resources.rc  roomworks reverb description.txt  signal flow decription.txt  ui folder file tree.txt  vst2 nodes code.txt  vst2_working sdk by xaymar .txt  (+1 more)
.github/workflows/: build_ios.yml  build_linux.yml  build_mac_app.yml  build_windows_app.yml
JUCE/: CHANGE_LIST.md  CMakeLists.txt
assets/: license.mid
backup code/: CMakeLists.txt  build_mac_app.yml
backup code/.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
backup code/src/: AudioMidiTab_RecordingSettings.cpp  AudioSettingsTab.cpp  AudioSettingsTab.h  AutoSamplerProcessor.cpp  AutoSamplerProcessor.h  BackgroundPluginScanner.h  CCStepperProcessor.h  ContainerProcessor.cpp  ContainerProcessor.h  GraphCanvas.h  GraphCanvas_Connections.cpp  GraphCanvas_Core.cpp  GraphCanvas_DragDrop.cpp  GraphCanvas_Layout.cpp  GraphCanvas_MidiPlayer_Integration.cpp  GraphCanvas_Mouse (2).cpp  GraphCanvas_Mouse.cpp  GraphCanvas_Paint.cpp  GraphCanvas_Paint_drawNodeButtons.cpp  GraphCanvas_PluginMenu.cpp  GraphCanvas_Tooltips.cpp  Info.plist  InstrumentSelector.cpp  InstrumentSelector.h  LatcherEditorComponent.h  ManualSamplerProcessor.cpp  ManualTab.cpp  ManualTab.h  MediaPlayerAccess.h  MeteringProcessor.cpp  MidiMonitorProcessor.cpp  MidiMonitorProcessor.h  MidiMultiFilterProcessor.h  MidiMultiFilter_NodeFace_Patches.cpp  MidiPlayerProcessor.h  MixerStrip.h  MixerView.cpp  MixerView.h  NullMediaPlayer.h  OnStageDialog.h  (+45 more)
backup code_vst2+drag_n_drop/src/: AudioSettingsTab.cpp  GraphCanvas.h  GraphCanvas_DragDrop.cpp  GraphCanvas_Mouse.cpp  GraphCanvas_PluginMenu.cpp  Logger.h  ManualTab.cpp  ManualTab.h  MidiMonitorProcessor.cpp  MixerView.cpp  PluginBrowserPanel.h  PluginManagerTab_Folders.cpp  PluginManagerTab_Main.cpp  PluginManagerTab_Scanner.cpp  PluginProcessor_03_SettingsAndListener.cpp  PluginProcessor_04_IOChannels.cpp  PluginProcessor_MeteringProcessor_Class.h  RecorderProcessor.cpp  StudioTab.h  Style.h
demo_videos/demo1.tscproj/: HalfScreenFill.tscshadervid  demo1.tscproj
impulses for reverb/EWQL Spaces - IR Library/: EWQL Spaces - IR Library.html  readme.txt
impulses for reverb/TC.Electronics.M3000.Impulse.Responses.WAV/: Readme.txt
midi files/: PSD.mid
onstage_stuff/: full code_onstage.txt
onstage_stuff/src/: AudioEngine.cpp  AudioEngine.h  AudioSettingsTab.cpp  AudioSettingsTab.h  CMakeLists.txt  GraphCanvas.cpp  GraphCanvas.h  InstrumentSelector.cpp  InstrumentSelector.h  LegacyMainComponent.h  Main.cpp  ManualTab.cpp  ManualTab.h  MidiSelectors.cpp  MidiSelectors.h  MixerStrip.cpp  MixerView.cpp  MixerView.h  PluginEditor.cpp  PluginEditor.h  PluginManagerTab.cpp  PluginManagerTab.h  PluginProcessor.cpp  PluginProcessor.h  RegistrationComponent.h  RegistrationTab.cpp  SimpleConnectorProcessor.cpp  StandaloneMain.cpp  StereoMeterProcessor.cpp  StereoMeterProcessor.h  StudioTab.cpp  StudioTab.h  Style.h  UIComponents.h
onstage_stuff/src/IPC/: SharedMemoryManager.h
onstage_stuff/src/UI/: DelayPanel.h  DynamicEQPanel.h  ExciterPanel.h  HarmonizerPanel.h  HeaderBar.h  IOPage.cpp  IOPage.h  LevelMeter.h  ManualComponent.h  MasterMeter.cpp  MediaPage.h  PlaylistComponent.cpp  PlaylistComponent.h  PlaylistDataStructures.h  ReverbPanel.h
onstage_stuff/src/dsp/: DynamicEQProcessor.h  EQProcessor.h  ExciterProcessor.cpp  ReverbProcessor.cpp
onstage_stuff/src/engine/: NativeMediaPlayer_Apple.mm  VLCMediaPlayer.h
src/: App.cpp  App.h  AppLogger.h  AudioEngine.cpp  AudioEngine.h  AudioSettingsTab.cpp  AudioSettingsTab.h  AutoSamplerEditorComponent.h  AutoSamplerProcessor.cpp  BackgroundPluginScanner.cpp  CCStepperEditorComponent.h  CCStepperProcessor.cpp  ContainerProcessor.cpp  ContainerProcessor.h  GraphCanvas.h  GraphCanvas_Connections.cpp  GraphCanvas_Core.cpp  GraphCanvas_DragDrop.cpp  GraphCanvas_Layout.cpp  GraphCanvas_Mouse.cpp  GraphCanvas_Paint.cpp  GraphCanvas_Paint_drawNodeButtons.cpp  GraphCanvas_PluginMenu.cpp  GraphCanvas_PluginWindow.cpp  GraphCanvas_Recorder_Integration.cpp  GraphCanvas_Sampler_Integration.cpp  GraphCanvas_Tooltips.cpp  IOSettingsManager.cpp  IOSettingsManager.h  InstrumentSelector.cpp  InstrumentSelector.h  LatcherEditorComponent.h  LatcherProcessor.cpp  LatcherProcessor.h  LegacyMainComponent.cpp  LongPressDetector.h  MIDI_CC_RemoteControl_Patches.cpp  ManualSamplerProcessor.cpp  ManualSamplerProcessor.h  ManualTab.cpp  (+60 more)
src/IPC/: SharedMemoryManager.cpp
src/UI/: CompressorPanel.h  DeEsserPanel.h  DelayPanel.h  DoublerPanel.h  DynamicEQPanel.h  EQPanel.h  EffectToggleButton.h  ExciterPanel.h  GatePanel.h  HarmonizerPanel.h  HeaderBar.cpp  HeaderBar.h  IOPage.cpp  IOPage.h  InternalPluginBrowser.h  MainComponent.cpp  MainComponent.h  ManualComponent.h  MasterMeter.cpp  MasterMeter.h  MasterPanel.h  MediaPage.cpp  PitchPanel.h  PlaylistComponent.cpp  PlaylistComponent.h  PlaylistDataStructures.h  PreAmpPanel.h  ReverbPanel.h  SaturationPanel.h  SculptPanel.h  StudioReverbPanel.h  StyledSlider.h  TrackBannerComponent.cpp  TrackBannerComponent.h  TransientSplitterPanel.h  TunerPanel.h  VocalsPage.cpp  VocalsPage.h  WiringCanvas.h  WiringCanvas_Connections.cpp  (+8 more)
src/dsp/: ChamberReverbProcessor.h  CompressorProcessor.h  DeEsserProcessor.h  DelayDSP_Crystal.h  DelayDSP_Drift.h  DelayDSP_Oxide.h  DelayDSP_Warp.h  DelayProcessor.h  (+26 more)
(+216 files in other folders)
